# DisplayBoard

./: .gitignore  README.md  brighten_icons.py  config_example.yaml  main.py  pyproject.toml
.claude/: settings.local.json
scripts/: crop_svg_viewbox.py  setup_calendar_auth.py
src/: __init__.py  config_schemas.py  controller.py  data_manager.py  local_enumerations.py  main.py  topic_background.py  topic_calendar.py  topic_datetime.py  topic_powercontroller.py  topic_wanfailover.py  topic_weather.py  webapp.py
static/: board.js  styles.css
templates/: board2.html  board_test.html  calendar.html  energy_detail.html  primary.html
templates/archive/: board1.html
